<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NoteActivity"
    tools:showIn="@layout/activity_note">


    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:nextFocusRight="@+id/text_note_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/note_title_hint"
        android:inputType="textMultiLine"
        android:nextFocusRight="@+id/text_note_text"
        app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
        app:layout_constraintStart_toStartOf="@+id/spinner_courses"
        app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />

    <EditText
        android:id="@+id/text_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/note_text_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/text_note_title"
        app:layout_constraintStart_toStartOf="@+id/text_note_title"
        app:layout_constraintTop_toBottomOf="@+id/text_note_title" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:max="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

    <view
        android:id="@+id/module_status"
        class="com.jafriam.notekeeper.ModuleStatusView"
        id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/text_note_text"
        app:layout_constraintStart_toStartOf="@+id/text_note_text"
        app:layout_constraintTop_toBottomOf="@+id/text_note_text"
        app:outlineColor="#000"
        app:outlineWidth="5dp"
        app:shape="square" />
</androidx.constraintlayout.widget.ConstraintLayout>